--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,19 +1,19 @@
-.header {
-  position: fixed;
-  z-index: 20;
-  margin-top: 10px;
-}
+// .header {
+//   position: fixed;
+//   z-index: 20;
+//   margin-top: 10px;
+// }
 
-.header-wrapper {
-  width: 100%;
-}
+// .header-wrapper {
+//   width: 100%;
+// }
 
-.hamburgerButton {
-  font-size: 50px;
-}
+// .hamburgerButton {
+//   font-size: 50px;
+// }
 
-.header-image {
-  max-height: 75vh;
-}
+// .header-image {
+//   max-height: 75vh;
+// }
 
 
