--- a/src/app/components/photos/photos.component.scss
+++ b/src/app/components/photos/photos.component.scss
@@ -2,3 +2,7 @@
   margin: 5px;
   min-height: 40vh;
 }
+
+.carouselContainer {
+  overflow-x: hidden;
+}
